// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`constructLine > ansi colors 1`] = `
<div>
  <span style="color: rgb(0, 204, 255);">
    options(crayon.enabled = TRUE)
  </span>
</div>
`;

exports[`constructLine > error 1`] = `
<div>
  <span
    style="color: rgb(255, 83, 83);"
  >
    Error message
  </span>
</div>
`;
